--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 .row-header{
     margin:20px auto;
-    padding:10px 0px 10px 0px;
+    padding:0px auto;
    
 }
 
 .row-content {
-    margin:50px auto;
+    margin:0px auto;
     padding:20px 0px 20px 0px;
     border-bottom: 1px ridge;
     min-height:400px;
